# extraction_libraries

./: .gitignore  README.md  pyproject.toml  requirements.txt  tests.py
.github/workflows/: github-actions.yml
RS_citations/: README.md  setup.py
RS_citations/rechtspraak_citations_extractor/: __init__.py  citations_extractor.py  testing.py
cellar/: README.md  __init__.py  pyproject.toml  setup.py
cellar/cellar_extractor/: Testing_file.py  __init__.py  cellar.py  cellar_extra_extract.py  cellar_queries.py  cellar_sparql_queries.py  citations.py  citations_adder.py  csv_extractor.py  details.py  eurlex_scraping.py  fulltext_saving.py  json_to_csv.py  nodes_and_edges.py  operative_extraction.py  operative_extractions.py  output.py  para.py  sparql.py  test_output.py  testing.py
cellar/cellar_extractor/helpers/: citations_adder.py  csv_extractor.py  eurlex_scraping.py  fulltext_saving.py  sparql.py
cellar_extractor/: __init__.py  cellar.py  cellar_extra_extract.py  cellar_queries.py  cellar_sparql_queries.py  citations_adder.py  csv_extractor.py  eurlex_scraping.py  fulltext_saving.py  json_to_csv.py  nodes_and_edges.py  operative_extractions.py  sparql.py
echr/: README.md  setup.py  testing_file.py
echr/echr_extractor/: ECHR_html_downloader.py  ECHR_metadata_harvester.py  ECHR_nodes_edges_list_transform.py  README.md  __init__.py  clean_ref.py  echr.py  testing_file.py
echr/echr_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
echr/echr_extractor/definitions/mappings/: attribute_name_maps.py  attribute_value_maps.py
echr/echr_extractor/tests/: ECHR_metadata_harvester.py  __init__.py  echr.py
rechtspraak/: README.md  setup.py
rechtspraak/rechtspraak_extractor/: README.md  __init__.py  rechtspraak.py  rechtspraak_functions.py  rechtspraak_metadata.py  testing_file.py
rechtspraak/rechtspraak_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rechtspraak/rechtspraak_extractor/tests/: __init__.py  rechtspraak.py  rechtspraak_metadata.py
rechtspraak_extractor/: README.md  __init__.py  rechtspraak.py  rechtspraak_functions.py  rechtspraak_metadata.py  testing_file.py
tests/: 61986CJ0062.ENG.txt  test_cellar.py  test_cellar_sparql_queries.py  test_rechtspraak.py  tests.py
